# finally

./: .env.example  .gitignore  README.md  docker-compose.yml  market_data_demo.py
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/market/: __init__.py  cache.py  factory.py  interface.py  massive_client.py  models.py  seed_prices.py  simulator.py  stream.py
backend/app/models/: chat.py  common.py  portfolio.py  watchlist.py
backend/app/routes/: chat.py  health.py  portfolio.py  portfolio_history.py  watchlist.py
backend/app/schema/: seed.sql  tables.sql
backend/app/services/: chat.py  portfolio.py  watchlist.py
backend/app/tasks/: __init__.py  snapshots.py
backend/tests/: conftest.py  test_chat.py  test_chat_actions.py  test_config.py  test_db.py  test_health.py  test_portfolio.py  test_snapshots.py  test_trade_service.py  test_watchlist.py
backend/tests/market/: test_cache.py  test_factory.py  test_massive.py  test_models.py  test_simulator.py  test_simulator_source.py  test_stream.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
planning/: MARKET_DATA_COMPLETE.md  MARKET_DATA_DESIGN.md  MARKET_DATA_REVIEW.md  MARKET_INTERFACE.md  MARKET_SIMULATOR.md  MASSIVE_API.md  PLAN.md  REVIEW.md
test/: docker-compose.test.yml  package-lock.json  package.json  (+2 more)
(+91 files in other folders)
